--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                   <div class="row gx-1">
                     <div class="col-3">
                       <button type="button" class="btn btn-light w-100 mt-2 border">
-                        {
+                        (
                       </button>
                     </div>
                     <div class="col-3">
                       <button type="button" class="btn btn-light w-100 mt-2 border">
-                        }
+                        )
                       </button>
                     </div>
                     <div class="col-3">
@@ -120,6 +120,46 @@
                         +
                       </button>
                     </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        sin
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        ln
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        π
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        cos
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        log
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        e
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        tan
+                      </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        √
+                      </button>
+                    </div>
                   </div>
             </div>
           </div>
@@ -127,36 +167,8 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script>
-  document.addEventListener("DOMContentLoaded", function(){
-  const display = document.getElementById('calc-display');
-  const buttons = document.getElementsByClassName('btn');
-  let currentValue="";
+  <script src="/script.js">
 
-  function evaluateResult(){
-    const convertedValue = currentValue.replace("×","*").replace("÷","/").replace("%","*0.01")
-    const result = eval(convertedValue);
-    currentValue=result.toString();
-    display.value=currentValue;
-  }
-  for(let i=0;i<buttons.length; i++){
-    const button=buttons[i];
-    button.addEventListener('click',function(){
-      const value=button.innerText;
-      if (value=="AC"){
-        currentValue="";
-        display.value=currentValue;
-      }
-      else if(value == "="){
-        evaluateResult();
-      }
-      else{
-      currentValue+=value;
-      display.value=currentValue;
-      }
-    })
-  }
-  });
   </script>
   </body> 
 </html>
